<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="5dp"
    android:background="@color/primaryLightColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <Button
                android:id="@+id/toggleConnectionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10">

            <!-- Linear layout containing the plots /-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="8"
                android:layout_height="match_parent"
                android:weightSum="2"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:elevation="6dp"
                    android:layout_margin="6dp"
                    app:cardCornerRadius="12dp">

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/ecgLineChart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:elevation="6dp"
                    android:layout_margin="6dp"
                    app:cardCornerRadius="12dp">

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/oximeterLineChart"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </androidx.cardview.widget.CardView>


            </LinearLayout>

            <!-- Linear layout containing the labels /-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="3">

                <androidx.cardview.widget.CardView
                    android:id="@+id/pulseCadView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:elevation="6dp"
                    app:cardCornerRadius="12dp"
                    android:layout_margin="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:weightSum="5">

                        <TextView
                            android:id="@+id/pulseTitleTextView"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="5dp"
                            android:autoSizeTextType="uniform"
                            android:autoSizeMinTextSize="12sp"
                            android:autoSizeMaxTextSize="100sp"
                            android:autoSizeStepGranularity="2sp"
                            android:text="@string/pulse"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="4"
                            android:orientation="horizontal"
                            android:weightSum="5">

                            <TextView
                                android:id="@+id/pulseTextView"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="3"
                                android:textAlignment="center"
                                android:gravity="center"
                                android:layout_margin="5dp"
                                android:autoSizeTextType="uniform"
                                android:autoSizeMinTextSize="12sp"
                                android:autoSizeMaxTextSize="100sp"
                                android:autoSizeStepGranularity="2sp"
                                android:text=""/>

                            <TextView
                                android:id="@+id/bpmTextView"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="2"
                                android:autoSizeTextType="uniform"
                                android:autoSizeMinTextSize="20sp"
                                android:autoSizeMaxTextSize="40sp"
                                android:autoSizeStepGranularity="2sp"
                                android:text="@string/bpm"
                                android:gravity="center"/>

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/spO2CardView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:elevation="6dp"
                    app:cardCornerRadius="12dp"
                    android:layout_margin="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:weightSum="5">

                        <TextView
                            android:id="@+id/spO2TitleTextView"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="5dp"
                            android:autoSizeTextType="uniform"
                            android:autoSizeMinTextSize="12sp"
                            android:autoSizeMaxTextSize="100sp"
                            android:autoSizeStepGranularity="2sp"
                            android:text="@string/spo2"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="4"
                            android:orientation="horizontal"
                            android:weightSum="5">

                            <TextView
                                android:id="@+id/spO2TextView"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="3"
                                android:textAlignment="center"
                                android:gravity="center"
                                android:layout_margin="5dp"
                                android:autoSizeTextType="uniform"
                                android:autoSizeMinTextSize="12sp"
                                android:autoSizeMaxTextSize="100sp"
                                android:autoSizeStepGranularity="2sp"
                                android:text=""/>

                            <TextView
                                android:id="@+id/percentTextView"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="2"
                                android:autoSizeTextType="uniform"
                                android:autoSizeMinTextSize="20sp"
                                android:autoSizeMaxTextSize="40sp"
                                android:autoSizeStepGranularity="2sp"
                                android:text="@string/percentage"
                                android:gravity="center"/>

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/temperatureCardView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:elevation="6dp"
                    app:cardCornerRadius="12dp"
                    android:layout_margin="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:weightSum="5">

                        <TextView
                            android:id="@+id/temperatureTitleTextView"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="5dp"
                            android:autoSizeTextType="uniform"
                            android:autoSizeMinTextSize="12sp"
                            android:autoSizeMaxTextSize="100sp"
                            android:autoSizeStepGranularity="2sp"
                            android:text="@string/temperature"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="4"
                            android:orientation="horizontal"
                            android:weightSum="5">

                            <TextView
                                android:id="@+id/temperatureTextView"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="3"
                                android:textAlignment="center"
                                android:gravity="center"
                                android:layout_margin="5dp"
                                android:autoSizeTextType="uniform"
                                android:autoSizeMinTextSize="12sp"
                                android:autoSizeMaxTextSize="100sp"
                                android:autoSizeStepGranularity="2sp"
                                android:text=""/>

                            <TextView
                                android:id="@+id/degreesTextView"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="2"
                                android:autoSizeTextType="uniform"
                                android:autoSizeMinTextSize="20sp"
                                android:autoSizeMaxTextSize="40sp"
                                android:autoSizeStepGranularity="2sp"
                                android:text="@string/celciuss"
                                android:gravity="center"/>

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>



            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>